# softdevice-template

./: .gitignore  Cargo.toml  README.md  build.rs  link.x  memory.x
.cargo/: config.toml
src/: lib.rs
